--- a/css/index.scss
+++ b/css/index.scss
@@ -394,7 +394,7 @@ i.fa:hover {
   .early-access {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     text-align: initial;
 
     &__content {
@@ -402,6 +402,7 @@ i.fa:hover {
     }
 
     &__form {
+      width: 35%;
       .button {
         width: max-content;
       }
